set(SAMPLES_ROOT ${CMAKE_CURRENT_SOURCE_DIR})

macro(add_sample target_name)
    utils_add_executable(${target_name} "samples" ${ARGN})
    target_link_libraries(${target_name} ijk)
endmacro(add_sample name)

add_sample(benchmark ${SAMPLES_ROOT}/benchmark.cc)
add_sample(future ${SAMPLES_ROOT}/future.cc)
add_sample(dial ${SAMPLES_ROOT}/dial.cc)
add_sample(delay ${SAMPLES_ROOT}/delay.cc)
add_sample(echo_server ${SAMPLES_ROOT}/echo_server.cc)
add_sample(echo_client ${SAMPLES_ROOT}/echo_client.cc)
add_sample(custom_connection ${SAMPLES_ROOT}/custom_connection.cc)
add_sample(broadcast_server ${SAMPLES_ROOT}/broadcast_server.cc)
add_sample(broadcast_client ${SAMPLES_ROOT}/broadcast_client.cc)
